--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,5 @@
-language: android
+language: html
 
-android:
-  components:
-    - tools
-    - build-tools-24.0.0
-    - android-24
-    - extra-android-support
-    - extra-android-m2repository
-    - sys-img-armeabi-v7a-android-24
-
-  licenses:
-    - '.+'
-notifications:
-    email: false
-
-before_script:
-    - chmod +x gradlew
 
 
 
