--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://jenly1314.github.io
+url: https://jenly1314.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -86,7 +86,7 @@ theme: hexo-theme-matery
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
 type: git 
-repo: git@github.com:jenly1314/jenly1314.github.io.git  //（改成自己的用户名和用户名加域名） 
+repo: https://github.com/jenly1314/jenly1314.github.io.git  //（改成自己的用户名和用户名加域名） 
 branch: master
   
 search:
