--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ theme: hexo-theme-matery
 deploy:
 type: git 
 repo: https://github.com/jenly1314/jenly1314.github.io.git  //（改成自己的用户名和用户名加域名） 
-branch: master
+#branch: master
   
 search:
   path: search.xml
