--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render:
+skip_render: 
 
 # Writing
 new_post_name: :title.md # File name of new posts
@@ -84,10 +84,11 @@ theme: hexo-theme-matery
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
+
 deploy:
-type: git 
-repo: https://github.com/jenly1314/jenly1314.github.io.git  //（改成自己的用户名和用户名加域名） 
-#branch: master
+  type: git 
+  repo: https://github.com/jenly1314/jenly1314.github.io.git
+  branch: master
   
 search:
   path: search.xml
