--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "canvas-nest.js": "^2.0.4",
     "gitalk": "^1.5.0",
     "hexo": "^3.8.0",
+    "hexo-asset-image": "git+https://github.com/CodeFalling/hexo-asset-image.git",
     "hexo-deployer-git": "^1.0.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
