--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,14 @@ after_script:
   - git config user.email "jenly1314@gmail.com"
   - git add .
   - git commit -a -m "Auto update docs by Travis CI."
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
+#  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
+  - git push --force --quiet "https://${CODING_TOKEN}@${CODING_REF}" master:master
 
 branches:
   only:
-    - # blog-source
+    - blog-source
 
 env:
  global:
    - GH_REF: github.com/jenly1314/jenly1314.github.io.git
+   - CODING_REF: git.coding.net/jenly/jenly.coding.me.git
