--- a/themes/hexo-theme-matery/_config.yml
+++ b/themes/hexo-theme-matery/_config.yml
@@ -59,7 +59,7 @@ video:
   enable: true
   showTitle: true
   title: 精彩视频
-  url: https://jenly1314.github.io/videos/WOD2017NBC-Kinjaz.mp4
+  url: https://jenly1314.gitee.io/videos/WOD2017NBC-Kinjaz.mp4
   pic:
   thumbnails:
   height: # 如：400
