--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 after_script:
   - cd ./public
   - git init
-  - git config user.name "jenly1314"
+  - git config user.name "Jenly"
   - git config user.email "jenly1314@gmail.com"
   - git add .
   - git commit -a -m "Auto update docs by Travis CI."
