--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "hexo-server": "^0.3.3",
     "hexo-wordcount": "^6.0.1",
     "react": "^16.13.1",
-    "react-flip-move": "^2.9.14",
-    "semver": "^7.3.2"
+    "react-flip-move": "^2.9.14"
   }
 }
