--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hexo-server": "^0.3.3",
     "hexo-wordcount": "^6.0.1",
     "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-flip-move": "^2.10.2",
     "semver": "^7.3.2"
   }
