--- a/package.json
+++ b/package.json
@@ -6,27 +6,20 @@
     "version": "3.9.0"
   },
   "dependencies": {
-    "canvas-nest.js": "^2.0.4",
-    "gitalk": "^1.5.0",
-    "hexo": "^3.9.0",
-    "hexo-asset-image": "git+https://github.com/CodeFalling/hexo-asset-image.git",
+    "hexo": "^3.7.1",
     "hexo-deployer-git": "^1.0.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.1",
-    "hexo-generator-search": "^2.4.0",
+    "hexo-generator-search": "^2.2.5",
     "hexo-generator-tag": "^0.2.0",
-    "hexo-permalink-pinyin": "^1.1.0",
+    "hexo-permalink-pinyin": "^1.0.0",
     "hexo-prism-plugin": "^2.3.0",
     "hexo-renderer-ejs": "^0.3.1",
-    "hexo-renderer-marked": "^2.0.0",
+    "hexo-renderer-marked": "^1.0.1",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.3",
-    "hexo-wordcount": "^6.0.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-flip-move": "^2.10.2",
-    "semver": "^7.3.2"
+    "hexo-server": "^0.3.1",
+    "hexo-wordcount": "^6.0.1"
   }
 }
