--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hexo-renderer-marked": "^3.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
+    "hexo-util": "^2.4.0",
     "hexo-wordcount": "^6.0.1"
   }
 }
