--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,6 @@ jobs:
           hexo clean && hexo generate
       - name: Hexo deploy
         env:
-	  GH_REF: github.com/jenly1314/jenly1314.github.io.git
           GH_TOKEN: ${{secrets.ACCESS_TOKEN}}
         run: |
           cd ./public
@@ -38,4 +37,4 @@ jobs:
           git config user.email "jenly1314@gmail.com"
           git add .
           git commit -a -m "Auto update docs by Travis CI."
-          git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
+          git push --force --quiet "https://${GH_TOKEN}@github.com/jenly1314/jenly1314.github.io.git" master:master
