--- a/themes/hexo-theme-matery/_config.yml
+++ b/themes/hexo-theme-matery/_config.yml
@@ -59,7 +59,7 @@ video:
   enable: true
   showTitle: true
   title: 精彩视频
-  url: videos/WOD2017NBC_Kinjaz.mp4
+  url: /videos/WOD2017NBC_Kinjaz.mp4
   pic:
   thumbnails:
   height: # 如：400
@@ -171,11 +171,21 @@ profile:
 myProjects:
   enable: true
   data:
-    KingTV:
-      icon: fa-play
-      iconBackground: 'linear-gradient(to bottom right, #17AAE1 0%, #8A2BE2 100%)'
-      url: http://github.com/jenly1314/KingTV
-      desc: 一个基于MVP构建的高仿全民直播（全民TV）开源项目。
+    UltraSwipeRefresh:
+        icon: fa-refresh
+        iconBackground: 'linear-gradient(to bottom right, #17AAE1 0%, #8A2BE2 100%)'
+        url: http://github.com/jenly1314/UltraSwipeRefresh
+        desc: UltraSwipeRefresh一个可带来极致体验的Compose刷新组件。
+    AndroidKTX:
+        icon: fa-refresh
+        iconBackground: 'linear-gradient(to bottom right, #17CAE1 0%, #8C2BE2 100%)'
+        url: http://github.com/jenly1314/AndroidKTX
+        desc: AndroidKTX一个简化 Android 开发的 Kotlin 工具类集合。
+    MLKit:
+        icon: fa-camera
+        iconBackground: 'linear-gradient(to bottom right, #17AAA1 0%, #8A2AE2 100%)'
+        url: http://github.com/jenly1314/MLKit
+        desc: ML Kit是一个强大易用的工具包。通过ML Kit您可以很轻松的实现文字识别、条码识别、图像标记、人脸检测、对象检测等功能。
     ZXingLite:
         icon: fa-qrcode
         iconBackground: 'linear-gradient(to bottom right, #F06292 0%, #4169E1 100%)'
@@ -185,27 +195,32 @@ myProjects:
         icon: fa-android
         iconBackground: 'linear-gradient(to bottom right, #8A2BE2 0%, #00BFFF 100%)'
         url: https://github.com/jenly1314/WanAndroid
-        desc: 基于Architecture Components dependencies（Lifecycle，LiveData，ViewModel，Room）构建的WanAndroid开源项目
+        desc: 基于JetPack（Lifecycle，LiveData，ViewModel，Room）构建的WanAndroid开源项目。
+    MVVMFrame:
+        icon: fa-home
+        iconBackground: 'linear-gradient(to bottom right, #29B6F6 0%, #7B68EE 100%)'
+        url: https://github.com/jenly1314/MVVMFrame
+        desc: 基于Google官方推出的Jitpack（Lifecycle，LiveData，ViewModel，Room）构建的MVVM快速开发框架。
     MVPFrame:
         icon: fa-home
         iconBackground: 'linear-gradient(to bottom right, #29B6F6 0%, #7B68EE 100%)'
         url: https://github.com/jenly1314/MVPFrame
-        desc: MVPFrame是一个集合了 Retrofit2 + RXJava2 + OkHttp3 + Mosby3 二次封装构建的MVP快速开发框架，为敏捷开发而生
-    MVVMFrame:
-        icon: fa-home
-        iconBackground: 'linear-gradient(to bottom right, #7B68EE 0%, #32CD32 100%)'
-        url: https://github.com/jenly1314/MVVMFrame
-        desc: 基于Google官方推出的Jitpack（Lifecycle，LiveData，ViewModel，Room）构建的MVVM快速开发框架
+        desc: MVPFrame是一个集合了 Retrofit2 + RXJava2 + OkHttp3 + Mosby3 二次封装构建的MVP快速开发框架，为敏捷开发而生。
     AppUpdater:
         icon: fa-download
-        iconBackground: 'linear-gradient(to bottom right, #32CD32 0%, #17AAE1 100%)'
+        iconBackground: 'linear-gradient(to bottom right, #7B68EE 0%, #32CD32 100%)'
         url: https://github.com/jenly1314/AppUpdater
-        desc: AppUpdater是一个专注于App更新，一键傻瓜式集成App版本升级的开源库。(无需担心通知栏适配；无需担心重复点击下载；无需担心App安装等问题；这些AppUpdater都已帮您处理好。)
+        desc: AppUpdater是一个专注于App更新，一键傻瓜式集成App版本升级的开源库。
     CircleProgressView:
         icon: fa-spinner
-        iconBackground: 'linear-gradient(to bottom right, #17AAE1 0%, #008000 100%)'
+        iconBackground: 'linear-gradient(to bottom right, #32CD32 0%, #17AAE1 100%)'
         url: https://github.com/jenly1314/CircleProgressView
         desc: CircleProgressView是一个圆形渐变的进度动画控件，动画效果纵享丝滑。
+    KingTV:
+        icon: fa-play
+        iconBackground: 'linear-gradient(to bottom right, #17AAE1 0%, #008000 100%)'
+        url: http://github.com/jenly1314/KingTV
+        desc: 一个基于MVP构建的高仿全民直播（全民TV）开源项目。
     Base:
         icon: fa-fort-awesome
         iconBackground: 'linear-gradient(to bottom right, #32CD32 0%, #DAA520 100%)'
