--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,33 +8,43 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.12.1]
- 
     steps:
-      - uses: actions/checkout@v1
- 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v4
         with:
-          node-version: ${{ matrix.node-version }}
- 
-      - name: Install dependencies
-        run: |
-          npm install -g hexo-cli
-          npm install
-      - name: Hexo generate
-        run: |
-          hexo clean && hexo generate
-      - name: Hexo deploy
-        env:
-          GH_TOKEN: ${{secrets.ACCESS_TOKEN}}
-        run: |
-          cd ./public
-          git init
-          git config user.name "Jenly"
-          git config user.email "jenly1314@gmail.com"
-          git add .
-          git commit -a -m "Auto deploy by CI."
-          git push --force --quiet "https://${GH_TOKEN}@github.com/jenly1314/jenly1314.github.io.git" master:master
+          token: ${{ secrets.GITHUB_TOKEN }}
+          # If your repository depends on submodule, please see: https://github.com/actions/checkout
+          submodules: recursive
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
+        with:
+          # Examples: 20, 18.19, >=16.20.2, lts/Iron, lts/Hydrogen, *, latest, current, node
+          # Ref: https://github.com/actions/setup-node#supported-version-syntax
+          node-version: "18.12.1"
+      - name: Cache NPM dependencies
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: ${{ runner.OS }}-npm-cache
+          restore-keys: |
+            ${{ runner.OS }}-npm-cache
+      - name: Install Dependencies
+        run: npm install
+      - name: Build
+        run: npm run build
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./public
+  deploy:
+    needs: build
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
