--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,8 @@ timezone: ''
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://jenly1314.github.io/
 root: /
-permalink: :year/:month/:day/:title/
+#permalink: :year/:month/:day/:title/
+permalink: posts/:abbrlink.html
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
@@ -51,15 +52,15 @@ highlight:
   tab_replace: ''
   wrap: true
   hljs: false
-  
-                                                                                                                                                                                                                                                                                            
-#prism插件 用来显示代码高亮  
+
+
+#prism插件 用来显示代码高亮
 prism_plugin:
   mode: 'preprocess'    # realtime/preprocess
   theme: 'tomorrow'
   line_number: false    # default false
   custom_css:
-  
+
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
@@ -68,7 +69,7 @@ index_generator:
   path: ''
   per_page: 12
   order_by: -date
-  
+
 # Category & Tag
 default_category: uncategorized
 category_map:
@@ -99,20 +100,23 @@ theme: hexo-theme-matery
 ## Docs: https://hexo.io/docs/deployment.html
 
 deploy:
-  type: git 
+  type: git
 #  repo: git@github.com:jenly1314/jenly1314.github.io.git
   repo: https://github.com/jenly1314/jenly1314.github.io.git
   branch: master
-  
+
 search:
   path: search.xml
   field: post
-  
-permalink_pinyin:
-  enable: true
-  separator: '-' # default: '-'
-  
-  
+
+#permalink_pinyin:
+#  enable: true
+#  separator: '-' # default: '-'
+
+# abbrlink config
+abbrlink:
+  alg: crc32      #support crc16(default) and crc32
+
 feed:
   type: atom
   path: atom.xml
@@ -121,7 +125,7 @@ feed:
   content:
   content_limit: 140
   content_limit_delim: ' '
-  order_by: -date  
+  order_by: -date
 
-  
-  
+
+
